--- a/nblocks/config/resourceMappings.json
+++ b/nblocks/config/resourceMappings.json
@@ -1,4 +1,21 @@
 {
-  "graphql/**": "ANONYMOUS",
-  "/**": "ANONYMOUS"
+  "graphql/getAppAnonymous": "ANONYMOUS",
+  "graphql/getTenantAnonymous": "ANONYMOUS",
+  "graphql/getTenant": "TENANT_READ",
+  "graphql/listTenants": "TENANT_READ",
+  "graphql/getCustomerPortal": "TENANT_WRITE",
+  "graphql/updateTenant": "TENANT_WRITE",
+  "graphql/createTenantAnonymous": "ANONYMOUS",
+  "graphql/listUserRoles": "USER_READ",
+  "graphql/listUsers": "USER_READ",
+  "graphql/createUsers": "USER_WRITE",
+  "graphql/deleteUser": "USER_WRITE",
+  "graphql/updateUser": "USER_WRITE",
+  "graphql/sendPasswordResetLink": "USER_READ",
+  "graphql/**": "AUTHENTICATED",
+  "/file/prepareUploadAnonymous": "ANONYMOUS",
+  "/file/prepareUpload": "AUTHENTICATED",
+  "/auth/currentUser": "AUTHENTICATED",
+  "/webhook/incoming": "ANONYMOUS",
+  "/**": "AUTHENTICATED"
 }
