--- a/nblocks/config/resourceMappings.json
+++ b/nblocks/config/resourceMappings.json
@@ -13,10 +13,7 @@
   "graphql/updateUser": "USER_WRITE",
   "graphql/sendPasswordResetLink": "USER_READ",
   "graphql/**": "AUTHENTICATED",
-  "/analytics/data": {
-    "privilege": "AUTHENTICATED",
-    "plans": ["PREMIUM"]
-  },
+  "/analytics/data": "AUTHENTICATED",
   "/file/prepareUploadAnonymous": "ANONYMOUS",
   "/file/prepareUpload": "AUTHENTICATED",
   "/auth/currentUser": "AUTHENTICATED",
