Added code used in tutorial

--- a/nblocks/config/resourceMappings.json
+++ b/nblocks/config/resourceMappings.json
@@ -18,5 +18,6 @@
   "/file/prepareUpload": "AUTHENTICATED",
   "/auth/currentUser": "AUTHENTICATED",
   "/webhook/incoming": "ANONYMOUS",
+  "/todo/**": "AUTHENTICATED",
   "/**": "AUTHENTICATED"
 }
