--- a/nblocks/config/resourceMappings.json
+++ b/nblocks/config/resourceMappings.json
@@ -13,7 +13,7 @@
   "graphql/updateUser": "USER_WRITE",
   "graphql/sendPasswordResetLink": "USER_READ",
   "graphql/**": "AUTHENTICATED",
-  "/analytics/data": "AUTHENTICATED",
+  "/analytics/data": "ANALYTICS_READ",
   "/file/prepareUploadAnonymous": "ANONYMOUS",
   "/file/prepareUpload": "AUTHENTICATED",
   "/auth/currentUser": "AUTHENTICATED",
